# NQT

./: README.md
Examples/NQTranslator/: CMakeLists.txt  main.cpp
NQT/: CMakeLists.txt  nqt.cpp  nqt.h
NQT/NQOrm/: CmakeLists.txt
NQT/NQOrm/Batchs/: pqsql_install.bat
NQT/NQOrm/Headers/: nqorm.h
NQT/NQOrm/Sources/: nqorm.cpp
NQT/NQTranslator/: CMakeLists.txt
NQT/NQTranslator/Headers/: nqtranslator.h
NQT/NQTranslator/Sources/: nqtranslator.cpp
